[package]
name = "magnify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
iced = "0.13.1"
# reqwest = { version = "0.12.15", featues = ["json"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
