[package]
name = "magnify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
dotenv = "0.15.0"
iced = { version = "0.13.1", features = ["image"] }
# reqwest = { version = "0.12.15", featues = ["json"] }
reqwest = "0.12.15"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
